Clarify shadow pending operations code a bit
(Before trying to make sure associations and reference attributes
are correctly represented in these.)